2007-11-10  Lluis Sanchez Gual <lluis@novell.com> 

	* AutoHideBox.cs, DockGroupItem.cs, stock-auto-hide.png,
	  MonoDevelop.Dock.mdp, DockBarItem.cs, stock-close-12.png, TabStrip.cs,
	  DockGroup.cs, DockItem.cs, DockPosition.cs, DockBar.cs, DockObject.cs,
	  PlaceholderWindow.cs, DockLayout.cs, DockItemBehavior.cs,
	  stock-dock.png, DockContainer.cs, DockFrame.cs, DockGroupType.cs,
	  DockItemContainer.cs, DockItemStatus.cs, Makefile.am,
	  DockFrameTopLevel.cs: New docking manager implementation.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Dock.mdp: Project file names updated by change in MD path
	  functions.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* DockItem.cs: Restore style attachment when realizing the window. Fixes bug
	  #309204 although reopens #319478.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Dock.mdp, Makefile.am: Reorganized the extension point
	  hierarchy. Embedded all add-in manifests as resources.

2007-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Dock.mdp: Update.

2007-07-13  Mike Krüger <mkrueger@novell.com> 

	* DragNotebook.cs: Worked on bug 81349:double-click src tab =>
	  maximize.

2007-06-06  Lluis Sanchez Gual <lluis@novell.com> 

	* DockObject.cs, DockLayout.cs, DockNotebook.cs, DockPaned.cs,
	  DockMaster.cs: Real fix for bugs #81547 and #61113. The method
	  gtk_paned_find_neighbours was crashing because ForAll was overriden
	  in DockPaned, and the override was skipping the child GtkPaned
	  (needed by gtk_paned_find_neighbours to find the next paned to
	  focus in the paned hierarchy). Also, in DockObject, properties to
	  be serialized are now cached per-class, instead of per-object.
	* DockPlaceholder.cs: Commented debug output.

2007-04-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Dock.mdp: Updated.

2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs: Avoid incremental change of version.
